# gh-actions-test

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
